crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/SourceUnit/end_of_file_trivia_incomplete/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Slash. One of AbstractKeyword_Reserved, AddressKeyword_Reserved, AtKeyword_Unreserved, BoolKeyword_Reserved, BytesKeyword_Reserved, ContractKeyword_Reserved, EnumKeyword_Reserved, ErrorKeyword_Unreserved, EventKeyword_Reserved, FinneyKeyword_Unreserved, FixedKeyword_Reserved, FromKeyword_Unreserved, FunctionKeyword_Reserved, GlobalKeyword_Unreserved, Identifier, ImportKeyword_Reserved, IntKeyword_Reserved, InterfaceKeyword_Reserved, LayoutKeyword_Unreserved, LibraryKeyword_Reserved, MappingKeyword_Reserved, PragmaKeyword_Reserved, RevertKeyword_Unreserved, StringKeyword_Reserved, StructKeyword_Reserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved, TypeKeyword_Reserved, UfixedKeyword_Reserved, UintKeyword_Reserved, UsingKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/SourceUnit/end_of_file_trivia_incomplete/input/generated/input.sol:6:1]
   │
 6 │ /* unterminated comment
   │ ┬  
   │ ╰── Error occurred here.
───╯
